# midnight-indexer

./: .envrc  .gitignore  .license_headers.sh  .midnight.txt  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  docker-compose.yaml  justfile
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug-report.md  documentation-improvement.md  feature-request.md
.github/workflows/: build-chain-indexer.yaml  build-indexer-api.yaml  build-indexer-standalone.yaml  build-indexer-tests.yaml  build-wallet-indexer.yaml  checkmarx.yaml  ci-cloud.yaml  ci-standalone.yaml  dependabot.yaml
.node/0.12.0/: metadata.scale
.node/0.12.0/chain/chains/undeployed/paritydb/full/: log0  metadata
.node/0.12.0/chain/ledger_storage/: log0  metadata
.node/0.13.0-alpha.1/: metadata.scale
.node/0.13.0-alpha.1/chain/chains/undeployed/paritydb/full/: log0  metadata
.node/0.13.0-alpha.1/chain/ledger_storage/: log0  metadata
.node/0.13.0-alpha.3/: metadata.scale
.node/0.13.0-alpha.3/chain/chains/undeployed/paritydb/full/: log0  metadata
.node/0.13.0-alpha.3/chain/ledger_storage/: log0  metadata
chain-indexer/: Cargo.toml  Dockerfile  README.md  config.yaml
chain-indexer/examples/: node.rs
chain-indexer/src/: application.rs  domain.rs  infra.rs  lib.rs  main.rs
chain-indexer/src/application/: metrics.rs
chain-indexer/src/domain/: block.rs  contract_action.rs  fee.rs  header.rs  node.rs  storage.rs  transaction.rs  unshielded.rs  zswap.rs
chain-indexer/src/infra/: node.rs
chain-indexer/src/infra/node/: header.rs  runtimes.rs
chain-indexer/src/infra/storage/: postgres.rs  sqlite.rs
docs/: running.md
docs/api/v1/: api-documentation.md
indexer-api/: Cargo.toml  Dockerfile  README.md  config.yaml
indexer-api/graphql/: README.md  schema-v1.graphql
indexer-api/graphql/operations/: GetBlock.graphql  GetContractActions.graphql  GetTransactions.graphql  GetUnshieldedUtxos.graphql  GetWalletSync.graphql
indexer-api/src/: application.rs  config.rs  domain.rs  infra.rs  main.rs
indexer-api/src/domain/: api.rs  block.rs  contract_action.rs  storage.rs  transaction.rs  unshielded.rs  viewing_key.rs  zswap.rs
indexer-api/src/domain/storage/: block.rs  contract_action.rs  transaction.rs  unshielded_utxo.rs  wallet.rs
indexer-api/src/infra/: api.rs
indexer-api/src/infra/api/: v1.rs
indexer-api/src/infra/api/v1/: mutation.rs  query.rs  subscription.rs
indexer-api/src/infra/api/v1/subscription/: block.rs  contract.rs  contract_action.rs  unshielded.rs  wallet.rs
indexer-api/src/infra/storage/: postgres.rs  sqlite.rs
indexer-api/src/infra/storage/postgres/: block.rs  contract_action.rs  transaction.rs  unshielded_utxo.rs  wallet.rs
indexer-api/src/infra/storage/sqlite/: block.rs  contract_action.rs  transaction.rs  unshielded_utxo.rs  wallet.rs
indexer-common/: Cargo.toml  config.yaml  invalid-config.yaml
indexer-common/migrations/postgres/: 001_initial.sql
indexer-common/migrations/sqlite/: 001_initial.sql
indexer-common/src/: cipher.rs  config.rs  domain.rs  error.rs  infra.rs  lib.rs  serialize.rs  stream.rs  telemetry.rs
indexer-common/src/domain/: bytes.rs  protocol_version.rs  pub_sub.rs  unshielded.rs  viewing_key.rs  zswap.rs
indexer-common/src/infra/: pool.rs  pub_sub.rs  sqlx.rs  zswap_state_storage.rs
indexer-common/src/infra/ledger_state_storage/: in_mem.rs  nats.rs
indexer-common/src/infra/migrations/: postgres.rs  sqlite.rs
indexer-common/src/infra/pool/: postgres.rs  sqlite.rs
indexer-common/src/infra/pub_sub/: in_mem.rs  nats.rs
indexer-common/src/infra/pub_sub/in_mem/: publisher.rs  subscriber.rs
indexer-common/src/infra/pub_sub/nats/: publisher.rs  subscriber.rs
indexer-common/src/infra/sqlx/: postgres.rs  sqlite.rs
indexer-common/src/infra/zswap_state_storage/: in_mem.rs  nats.rs
indexer-standalone/: Cargo.toml  Dockerfile  README.md  config.yaml
indexer-standalone/src/: config.rs  main.rs
indexer-tests/: Cargo.toml  Dockerfile  README.md  e2e.graphql
indexer-tests/src/: chain_indexer_data.rs  e2e.rs  graphql_ws_client.rs  lib.rs  main.rs
indexer-tests/tests/: e2e_setup.rs  local_e2e.rs  storage.rs
wallet-indexer/: Cargo.toml  Dockerfile  README.md  config.yaml
wallet-indexer/src/: application.rs  domain.rs  infra.rs  main.rs
wallet-indexer/src/domain/: storage.rs
wallet-indexer/src/infra/: storage.rs
wallet-indexer/src/infra/storage/: postgres.rs  sqlite.rs
