[package]
name          = "wallet-indexer"
description   = "Wallet Indexer"
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[dependencies]
anyhow                    = { workspace = true }
chacha20poly1305          = { workspace = true }
const-hex                 = { workspace = true }
fastrace                  = { workspace = true }
futures                   = { workspace = true }
humantime-serde           = { workspace = true }
indexer-common            = { path = "../indexer-common" }
indoc                     = { workspace = true }
log                       = { workspace = true, features = [ "kv" ] }
itertools                 = { workspace = true }
midnight-base-crypto      = { workspace = true }
midnight-coin-structure   = { workspace = true }
midnight-ledger           = { workspace = true }
midnight-serialize        = { workspace = true }
midnight-storage          = { workspace = true }
midnight-transient-crypto = { workspace = true }
midnight-zswap            = { workspace = true }
secrecy                   = { workspace = true }
serde                     = { workspace = true, features = [ "derive" ] }
sqlx                      = { workspace = true, features = [ "runtime-tokio", "time", "uuid" ] }
thiserror                 = { workspace = true }
tokio                     = { workspace = true, features = [ "macros", "rt-multi-thread", "time" ] }
tokio-stream              = { workspace = true }
trait-variant             = { workspace = true }
uuid                      = { workspace = true, features = [ "v7" ] }

[dev-dependencies]
assert_matches         = { workspace = true }
midnight-ledger        = { workspace = true, features = [ "proving" ] }
testcontainers         = { workspace = true }
testcontainers-modules = { workspace = true, features = [ "postgres" ] }

[features]
cloud      = [ "indexer-common/cloud" ]
standalone = [ "indexer-common/standalone" ]
